[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/8bitOperatorPlus8-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/background.png" type="Texture" id=2]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/font_small.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=1]
size = 28
outline_size = 1
outline_color = Color( 0, 0.0313726, 1, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 1
outline_color = Color( 0.109804, 0.109804, 0.109804, 1 )
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 320, 320 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 150.5, 150.5 )
scale = Vector2( 5, 5 )
texture = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -125.5
margin_top = 39.0
margin_right = 125.5
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Weird Breakout"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.5
margin_top = -72.0
margin_right = 71.5
margin_bottom = -29.0
custom_fonts/font = SubResource( 2 )
text = "Play!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rotation" type="CheckBox" parent="CanvasLayer"]
margin_left = 25.0
margin_top = 165.0
margin_right = 225.0
margin_bottom = 203.0
custom_fonts/font = ExtResource( 4 )
text = "Rotation"

[node name="Zoom" type="CheckBox" parent="CanvasLayer"]
margin_left = 25.0
margin_top = 200.0
margin_right = 225.0
margin_bottom = 237.0
custom_fonts/font = ExtResource( 4 )
text = "Zoom"

[node name="Squish" type="CheckBox" parent="CanvasLayer"]
margin_left = 25.0
margin_top = 235.0
margin_right = 225.0
margin_bottom = 275.0
custom_fonts/font = ExtResource( 4 )
text = "Squish"

[node name="Funky" type="CheckBox" parent="CanvasLayer"]
margin_left = 250.0
margin_top = 165.0
margin_right = 510.0
margin_bottom = 203.0
custom_fonts/font = ExtResource( 4 )
text = "Funky Velocity"

[node name="Indecisive" type="CheckBox" parent="CanvasLayer"]
margin_left = 250.0
margin_top = 200.0
margin_right = 510.0
margin_bottom = 240.0
custom_fonts/font = ExtResource( 4 )
text = "Indecisive Ball"

[node name="Madness" type="CheckBox" parent="CanvasLayer"]
margin_left = 250.0
margin_top = 235.0
margin_right = 510.0
margin_bottom = 275.0
custom_fonts/font = ExtResource( 4 )
text = "All of the above"

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 0.5, 0.5 )
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_Button_pressed"]
[connection signal="toggled" from="CanvasLayer/Rotation" to="." method="_on_Rotation_toggled"]
[connection signal="toggled" from="CanvasLayer/Zoom" to="." method="_on_Zoom_toggled"]
[connection signal="toggled" from="CanvasLayer/Squish" to="." method="_on_Squish_toggled"]
[connection signal="toggled" from="CanvasLayer/Funky" to="." method="_on_Funky_toggled"]
[connection signal="toggled" from="CanvasLayer/Indecisive" to="." method="_on_Indecisive_toggled"]
[connection signal="toggled" from="CanvasLayer/Madness" to="." method="_on_Madness_toggled"]
